--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 	</div>
 	<!-- End Family -->
 	
-	<!-- Start Gallery -->
+	Start Gallery -->
 	<div id="gallery" class="gallery-box">
 		<div class="container-fluid">
 			<div class="row">
@@ -533,7 +533,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- End Contact -->
+	<!-- End Contact
 	
 	
 	<!-- End Footer -->
