--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="./images/gallery-08.jpg">
 							<img class="img-fluid" src="./images/gallery-08.jpg" alt="single image">
 							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
@@ -412,7 +412,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- End Gallery -->
 	
 	<!-- Start Events -->
